--- a/app/src/main/res/layout/histogram_frag.xml
+++ b/app/src/main/res/layout/histogram_frag.xml
@@ -24,6 +24,7 @@
         android:id="@+id/resultView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="true"
         android:adjustViewBounds="true"
          />
 
